# lambda.cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/: pull_request_template.md
.github/workflows/: release.yml
lambda_templates/python/: README.md  lambda_function.py
lambda_templates/typescript/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
src/: lambda.rs  main.rs  pipeline.rs  runtime.rs  template_helper.rs  terraform.rs
src/lambda_templates/typescript/tests/: lambda.spec.ts
src/terraform_module_templates/terraform/: main.tf
src/terraform_templates/dotnet/: lambda.tf
src/terraform_templates/python/: lambda.tf
templates/lambda_templates/typescript/: package.json  tsconfig.json
templates/pipeline_templates/github/workflows/: pull_request.yml  release.yml
templates/terraform_module_templates/terraform/: locals.tf
terraform_templates/python/: lambda.tf
terraform_templates/typescript/: lambda.tf
