[package]
name = "template"
version = "0.1.8"
edition = "2021"
authors = ["Kat Kmiotek"]

[dependencies]
clap = { version = "4.5.23", features = [ "derive" ] }
dialoguer = "0.11.0"
handlebars = "6.2.0"
rust-embed = { version = "6.8.1", features = ["debug-embed"] }
serde = "1.0.216"
serde_json = "1.0.133"
